style: Update SEO meta tags in index.html for improved visibility and social sharing

--- a/index.html
+++ b/index.html
@@ -2,10 +2,44 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logoFavicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logoFavicon.svg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arq Lucas Batista</title>
+
+    <!-- Meta tags para SEO básico -->
+    <meta
+      name="description"
+      content="Lucas Batista: Mestre em Arquitetura Hospitalar"
+    />
+
+    <!-- Meta tags Open Graph para WhatsApp e outras plataformas sociais -->
+    <meta
+      property="og:title"
+      content="Lucas Batista: Mestre em Arquitetura Hospitalar"
+    />
+    <meta
+      property="og:description"
+      content="Consultoria e projetos em arquitetura hospitalar"
+    />
+    <meta
+      property="og:image"
+      content="https://lb-site-eight.vercel.app/assets/lucas_batista_arq-FfwsdBym.png"
+    />
+    <meta property="og:url" content="https://lb-site-eight.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Meta tags Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Lucas Batista: Mestre em Arquitetura Hospitalar"
+    />
+    <meta
+      name="twitter:description"
+      content="Consultoria e projetos em arquitetura hospitalar."
+    />
+    <meta name="twitter:image" content="https://lb-site-eight.vercel.app/" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
