fix: change the title Mestre to Especialista in `index.html`

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <!-- Meta tags para SEO básico -->
     <meta
       name="description"
-      content="Lucas Batista: Mestre em Arquitetura Hospitalar"
+      content="Lucas Batista: Especialista em Arquitetura Hospitalar"
     />
 
     <!-- Meta tags Open Graph para WhatsApp e outras plataformas sociais -->
     <meta
       property="og:title"
-      content="Lucas Batista: Mestre em Arquitetura Hospitalar"
+      content="Lucas Batista: Especialista em Arquitetura Hospitalar"
     />
     <meta
       property="og:description"
@@ -33,7 +33,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Lucas Batista: Mestre em Arquitetura Hospitalar"
+      content="Lucas Batista: Especialista em Arquitetura Hospitalar"
     />
     <meta
       name="twitter:description"
